@@ -1,4 +1,5 @@
 Development
+    Add internal ASX parser
     Version bump and add -fPIC to gmtk and gmlib
     Remove need to use libtool
     Apply patch to fix --as-needed linker flag
